feature(Controller, Service): add controller endpoint, add service, add controller tests, add verint config

--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -35,5 +35,11 @@
     ],
     "Environment": "local",
     "AllowSwagger": true
-  }
+  },
+  "HttpClientConfiguration": [
+    {
+      "iGatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.IVerintServiceGateway",
+      "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways"
+    }
+  ]
 }
