--- a/tests/contact-start-service-tests.csproj
+++ b/tests/contact-start-service-tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\contact_start_service.csproj" />
+    <ProjectReference Include="..\src\contact-start-service.csproj" />
   </ItemGroup>
 
 </Project>
