--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -41,5 +41,18 @@
       "iGatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.IVerintServiceGateway",
       "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways"
     }
-  ]
+  ],
+  "VerintConfiguration": {
+    "ClassificationMap": {
+      "Alcohol": 2002927,
+      "Drugs": 2002928,
+      "General lifestyle advice": 2002922,
+      "Physical activity": 2002923,
+      "Healthy weight": 2002925,
+      "Other": 2002920,
+      "Smoking": 2002924,
+      "More than one area": 2002921,
+      "Healthy eating": 2002926
+    }
+  }
 }
