feature(Services/ContactSTARTService): add call to send email

--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -40,6 +40,10 @@
     {
       "iGatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.IVerintServiceGateway",
       "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways"
+    },
+    {
+      "iGatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.IMailingServiceGateway",
+      "gatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.MailingServiceGateway, StockportGovUk.NetStandard.Gateways"
     }
   ],
   "VerintConfiguration": {
