chore(appsettings): add baseUrl

--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -39,11 +39,13 @@
   "HttpClientConfiguration": [
     {
       "iGatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.IVerintServiceGateway",
-      "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways"
+      "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways",
+      "baseUrl": "http://scnwebdev1.stockport.gov.uk:8050/"
     },
     {
       "iGatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.IMailingServiceGateway",
-      "gatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.MailingServiceGateway, StockportGovUk.NetStandard.Gateways"
+      "gatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.MailingServiceGateway, StockportGovUk.NetStandard.Gateways",
+      "baseUrl": "http://scninthub-intlb.stockport.gov.uk:5500/"
     }
   ],
   "VerintConfiguration": {
