--- a/src/Config/appsettings.prod.json
+++ b/src/Config/appsettings.prod.json
@@ -1,5 +1,7 @@
 {
   "Availability:Environment": "prod",
   "ElasticSearchAwsConfiguration:IndexFormat": "contact_start_service-prod-{0:yyyy.MM-dd}",
-  "ElasticSearchAwsConfiguration:Enabled": true
+  "ElasticSearchAwsConfiguration:Enabled": true,
+  "HttpClientConfiguration:0:baseUrl": "http://scninthub-prd1.stockport.gov.uk",
+  "HttpClientConfiguration:1:baseUrl": "http://scninthub-prdlb.stockport.gov.uk:5500/"
 }
