fix(config): fix mailing service baseUrl, fix verint service baseUrl

--- a/src/Config/appsettings.int.json
+++ b/src/Config/appsettings.int.json
@@ -1,6 +1,5 @@
 {
   "Availability:Environment": "int",
   "ElasticSearchAwsConfiguration:IndexFormat": "contact_start_service-int-{0:yyyy.MM-dd}",
-  "ElasticSearchAwsConfiguration:Enabled": true,
-  "HttpClientConfiguration:1:baseUrl": "http://scninthub-intlb.stockport.gov.uk:5500/"
+  "ElasticSearchAwsConfiguration:Enabled": true
 }
