--- a/src/Config/appsettings.qa.json
+++ b/src/Config/appsettings.qa.json
@@ -1,6 +1,5 @@
 {
   "Availability:Environment": "qa",
   "ElasticSearchAwsConfiguration:IndexFormat": "contact_start_service-qa-{0:yyyy.MM-dd}",
-  "ElasticSearchAwsConfiguration:Enabled": true,
-  "HttpClientConfiguration:1:baseUrl": "http://scninthub-qalb.stockport.gov.uk:5500/"
+  "ElasticSearchAwsConfiguration:Enabled": true
 }
