--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -45,7 +45,7 @@
     {
       "iGatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.IMailingServiceGateway",
       "gatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.MailingServiceGateway, StockportGovUk.NetStandard.Gateways",
-      "baseUrl": "http://scninthub-intlb.stockport.gov.uk:5500/"
+      "baseUrl": "http://localhost:5500/"
     }
   ],
   "VerintConfiguration": {
