--- a/src/Config/appsettings.json
+++ b/src/Config/appsettings.json
@@ -36,18 +36,11 @@
     "Environment": "local",
     "AllowSwagger": true
   },
-  "HttpClientConfiguration": [
-    {
-      "iGatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.IVerintServiceGateway",
-      "gatewayType": "StockportGovUK.NetStandard.Gateways.VerintServiceGateway.VerintServiceGateway, StockportGovUk.NetStandard.Gateways",
-      "baseUrl": "http://scnwebdev1.stockport.gov.uk:8050/"
-    },
-    {
-      "iGatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.IMailingServiceGateway",
-      "gatewayType": "StockportGovUK.NetStandard.Gateways.MailingServiceGateway.MailingServiceGateway, StockportGovUk.NetStandard.Gateways",
-      "baseUrl": "http://localhost:5500/"
-    }
-  ],
+  "IVerintServiceGatewayConfig": {
+    "EnablePollyPolicies": false,
+    "baseUrl": "http://scnwebdev1.stockport.gov.uk:8050/"
+  },
+  "IMailingServiceGatewayConfig:BaseUrl": "http://localhost:5500/",
   "VerintConfiguration": {
     "ClassificationMap": {
       "Alcohol": 2002927,
