--- a/src/Config/appsettings.stage.json
+++ b/src/Config/appsettings.stage.json
@@ -2,5 +2,5 @@
   "Availability:Environment": "stage",
   "ElasticSearchAwsConfiguration:IndexFormat": "contact_start_service-stage-{0:yyyy.MM-dd}",
   "ElasticSearchAwsConfiguration:Enabled": true,
-  "HttpClientConfiguration:0:baseUrl": "http://scnservicesprd1.stockport.gov.uk:8050/"
+  "IVerintServiceGatewayConfig:baseUrl": "http://scnservicesprd1.stockport.gov.uk:8050/"
 }
